[gd_scene load_steps=15 format=2]

[ext_resource path="res://threads.gd" type="Script" id=1]
[ext_resource path="res://spinner.gd" type="Script" id=2]
[ext_resource path="res://max_processors_spinbox.gd" type="Script" id=3]
[ext_resource path="res://thread_pixel_display.gd" type="Script" id=4]
[ext_resource path="res://delta_graph.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.160784, 0.160784, 0.160784, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.160784, 0.160784, 0.160784, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Hack-Regular.ttf"

[sub_resource type="DynamicFont" id=5]
size = 11
font_data = SubResource( 4 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="DynamicFontData" id=6]
font_path = "res://NotoSansMono-Medium.ttf"

[sub_resource type="DynamicFont" id=7]
size = 45
font_data = SubResource( 6 )

[sub_resource type="ImageTexture" id=8]
flags = 0
flags = 0

[node name="threads" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="fps" type="Label" parent="Control"]
margin_left = 917.0
margin_top = 7.0
margin_right = 1018.0
margin_bottom = 21.0
text = "fps"
align = 2

[node name="spinner" type="Node2D" parent="Control"]
visible = false
position = Vector2( 996.001, 43 )
script = ExtResource( 2 )

[node name="tex_spinner" type="TextureProgress" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
fill_mode = 4

[node name="do_work_button" type="Button" parent="Control"]
margin_left = 11.0
margin_top = 67.0
margin_right = 73.0
margin_bottom = 87.0
hint_tooltip = "Creates a bunch of threads and adds
them to the queue."
custom_colors/font_color = Color( 0.294118, 0.803922, 0.168627, 1 )
text = "do work"

[node name="log_output_rich" type="RichTextLabel" parent="Control"]
margin_left = 5.0
margin_top = 97.0
margin_right = 478.0
margin_bottom = 592.0
focus_mode = 2
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/mono_font = SubResource( 5 )
custom_colors/default_color = Color( 0.482353, 0.482353, 0.482353, 1 )
custom_colors/selection_color = Color( 0.239216, 0.239216, 0.239216, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "thing
[code]thing2[/code]
"
text = "thing
thing2
"
scroll_following = true
selection_enabled = true

[node name="enable_logging_check" type="CheckButton" parent="Control"]
margin_left = 261.0
margin_top = 59.521
margin_right = 337.0
margin_bottom = 99.521
hint_tooltip = "turn logging on and off
(operations on RichTextLabel can be
expensive, and can be a cause of
dropped frames, as seen in the
delta_graph when work is started or
completed, and when the log is culled)"
custom_styles/focus = SubResource( 9 )
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stop_work_button" type="Button" parent="Control"]
margin_left = 330.0
margin_top = 69.521
margin_right = 404.0
margin_bottom = 89.521
hint_tooltip = "Stops all threads, and clears the
pending queue."
text = "stop work"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clear_log_button" type="Button" parent="Control"]
margin_left = 411.0
margin_top = 69.521
margin_right = 477.0
margin_bottom = 89.521
hint_tooltip = "Clears the RichTextLabel log."
text = "clear log"

[node name="threads_container" type="Node" parent="Control"]

[node name="work_load_scale_label" type="Label" parent="Control/threads_container"]
margin_left = 12.0
margin_top = 27.0
margin_right = 43.0
margin_bottom = 41.0
text = "max:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="work_load_scale_spinbox" type="SpinBox" parent="Control/threads_container"]
margin_left = 160.08
margin_top = 67.0
margin_right = 234.08
margin_bottom = 91.0
hint_tooltip = "Load Scale is a multiplier on work
time for each thread job. Higher
create threads that run longer."
step = 0.001
value = 0.15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="processors_label" type="Label" parent="Control/threads_container"]
margin_left = 12.0
margin_top = 10.0
margin_right = 82.0
margin_bottom = 24.0
text = "processors"

[node name="max_processors_label" type="Label" parent="Control/threads_container"]
margin_left = 92.0802
margin_top = 72.0
margin_right = 160.08
margin_bottom = 86.0
text = "load scale:"

[node name="max_processors_spinbox" type="SpinBox" parent="Control/threads_container"]
margin_left = 11.0
margin_top = 40.0
margin_right = 85.0
margin_bottom = 64.0
rect_min_size = Vector2( 15, 0 )
hint_tooltip = "The maximum number of threads
allowed to run at once."
max_value = 12.0
value = 11.0
allow_greater = true
script = ExtResource( 3 )

[node name="n_processors_label" type="Label" parent="Control/threads_container"]
margin_left = 87.0
margin_top = -6.0
margin_right = 126.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 7 )
text = "5"

[node name="thread_labels_hbox" type="HBoxContainer" parent="Control/threads_container"]
margin_left = 157.0
margin_top = -6.0
margin_right = 997.0
margin_bottom = 57.0
custom_constants/separation = 15

[node name="threads_queued_hbox" type="HBoxContainer" parent="Control/threads_container/thread_labels_hbox"]
margin_right = 200.0
margin_bottom = 63.0
rect_min_size = Vector2( 200, 0 )

[node name="threads_title_label" type="Label" parent="Control/threads_container/thread_labels_hbox/threads_queued_hbox"]
margin_top = 24.0
margin_right = 52.0
margin_bottom = 38.0
text = "threads:"

[node name="queued_threads_label" type="Label" parent="Control/threads_container/thread_labels_hbox/threads_queued_hbox"]
margin_left = 56.0
margin_top = 24.0
margin_right = 104.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.415686, 0.415686, 0.415686, 1 )
text = "queued"

[node name="n_queued_threads_label" type="Label" parent="Control/threads_container/thread_labels_hbox/threads_queued_hbox"]
margin_left = 108.0
margin_right = 135.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.415686, 0.415686, 0.415686, 1 )
text = "5"

[node name="threads_active_hbox" type="HBoxContainer" parent="Control/threads_container/thread_labels_hbox"]
margin_left = 215.0
margin_right = 335.0
margin_bottom = 63.0
rect_min_size = Vector2( 120, 0 )

[node name="active_threads_label" type="Label" parent="Control/threads_container/thread_labels_hbox/threads_active_hbox"]
margin_top = 24.0
margin_right = 38.0
margin_bottom = 38.0
text = "active"

[node name="n_active_threads_label" type="Label" parent="Control/threads_container/thread_labels_hbox/threads_active_hbox"]
margin_left = 42.0
margin_right = 69.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 7 )
text = "5"

[node name="threads_completed_hbox" type="HBoxContainer" parent="Control/threads_container/thread_labels_hbox"]
margin_left = 350.0
margin_right = 450.0
margin_bottom = 63.0

[node name="completed_threads_label" type="Label" parent="Control/threads_container/thread_labels_hbox/threads_completed_hbox"]
margin_top = 24.0
margin_right = 69.0
margin_bottom = 38.0
custom_colors/font_color = Color( 1, 0.831373, 0.431373, 1 )
text = "completed"

[node name="n_completed_threads_label" type="Label" parent="Control/threads_container/thread_labels_hbox/threads_completed_hbox"]
margin_left = 73.0
margin_right = 100.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0.831373, 0.431373, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "5"

[node name="thread_pixel_display" type="TextureRect" parent="Control"]
margin_left = 484.0
margin_top = 98.0
margin_right = 534.0
margin_bottom = 147.0
rect_scale = Vector2( 10, 10 )
texture = SubResource( 8 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="delta_graph" type="TextureRect" parent="Control"]
margin_left = 485.0
margin_top = 50.0
margin_right = 984.0
margin_bottom = 92.0
script = ExtResource( 5 )
[connection signal="button_up" from="Control/do_work_button" to="." method="_on_do_work_button_button_up"]
[connection signal="pressed" from="Control/enable_logging_check" to="." method="_on_enable_logging_check_pressed"]
[connection signal="button_up" from="Control/stop_work_button" to="." method="_on_stop_work_button_button_up"]
[connection signal="button_up" from="Control/clear_log_button" to="." method="_on_clear_log_button_button_up"]
[connection signal="value_changed" from="Control/threads_container/max_processors_spinbox" to="." method="_on_max_processors_spinbox_value_changed"]
[connection signal="value_changed" from="Control/threads_container/max_processors_spinbox" to="Control/threads_container/max_processors_spinbox" method="_on_max_processors_spinbox_value_changed"]
